--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,8 @@ wiki:
         url: /wiki/robotics-project-guide/define-your-goals-and-requirements/
       - title: Choose a robot
         url: /wiki/robotics-project-guide/choose-a-robot/
+      - title: Make a robot
+        url: /wiki/robotics-project-guide/make-a-robot/
       - title: Choose a language (or languages)
         url: /wiki/robotics-project-guide/choose-a-language/
       - title: Robot communication
