--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,6 +29,8 @@ wiki:
         url: /wiki/robotics-project-guide/test-and-debug/
       - title: Demo day!
         url: /wiki/robotics-project-guide/demo-day/
+      - title: A Comprehensive Overview of Humanoid Robot Planning, Control, and Skill Learning
+        url: /wiki/robotics-project-guide/humanoid-robot.md
   - title: System Design & Development
     url: /wiki/system-design-development/
     children:
