--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -183,6 +183,11 @@ wiki:
         url: /wiki/machine-learning/mediapipe-live-ml-anywhere.md/
       - title: NLP for robotics
         url: /wiki/machine-learning/nlp_for_robotics.md/
+  - title: Reinforcement Learning
+    url: /wiki/reinforcemnet-learning
+    children:
+      - title: Key Concepts in Reinforcemnet Learning (RL)
+        url: /wiki/reinforcemnet-learning/key-concepts-in-rl/
   - title: State Estimation
     url: /wiki/state-estimation/
     children:
