--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -139,6 +139,8 @@ wiki:
         url: /wiki/sensing/azure-block-detection/
       - title: DWM1001 UltraWideband Positioning System
         url: /wiki/sensing/ultrawideband-beacon-positioning.md
+      - title: Perception via Thermal Imaging
+        url: /wiki/sensing/thermal-perception/
   - title: Controls & Actuation
     url: /wiki/actuation/
     children:
