Team A 25S Wiki Entry

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -98,6 +98,8 @@ wiki:
         url: /wiki/common-platforms/ros2-navigation-for-clearpath-husky/
       - title: Hello Robot Stretch RE1
         url: /wiki/common-platforms/hello-robot
+      - title:
+      	url: /wiki/common-platforms/ros2_ios_app_with_swift/
   - title: Sensing
     url: /wiki/sensing/
     children:
