--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -139,6 +139,8 @@ wiki:
         url: /wiki/sensing/azure-block-detection/
       - title: DWM1001 UltraWideband Positioning System
         url: /wiki/sensing/ultrawideband-beacon-positioning.md
+      - title: Robotics with the Microsoft Hololens2
+        url: /wiki/sensing/hololens-101.md
   - title: Controls & Actuation
     url: /wiki/actuation/
     children:
