Add RRT and PRM planning article

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -360,6 +360,8 @@ wiki:
         url: /wiki/planning/resolved-rates/
       - title: Multi Robot Planning Design
         url: /wiki/planning/multi-robot-planning/
+      - title: Sampling-Based Motion Planning with RRT and PRM Variants for Multi-Agent Systems
+        url: /wiki/planning/rrt-prm-planning/
       - title: Motion Planning in frenet frame
         url: /wiki/planning/frenet-frame-planning.md/
       - title: Move Base Flex
