--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -188,8 +188,10 @@ wiki:
         url: /wiki/reinforcemnet-learning/key-concepts-in-rl/
       - title: Reinforcement Learning Algorithms
         url: /wiki/reinforcemnet-learning/reinforcement-learning-algorithms/
-      -title: Policy Gradient Methods
+      - title: Policy Gradient Methods
         url: /wiki/reinforcemnet-learning/intro-to-policy-gradient-methods/
+      - title: Foundation of Value-Based Reinforcement Learning
+        url: /wiki/reinforcemnet-learning/value-based-reinforcement-learning/
   - title: State Estimation
     url: /wiki/state-estimation/
     children:
