--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -98,6 +98,8 @@ wiki:
         url: /wiki/common-platforms/ros2-navigation-for-clearpath-husky/
       - title: Hello Robot Stretch RE1
         url: /wiki/common-platforms/hello-robot
+      - title: Configure VScode for ros2
+        url: /wiki/common-platforms/configure_vscode_for_ros2/
   - title: Sensing
     url: /wiki/sensing/
     children:
