--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -271,6 +271,8 @@ wiki:
         url: /wiki/computing/setup-gpus-for-computer-vision/
       - title: Ubuntu Dual Boot and Troubleshooting Guide
         url: /wiki/computing/troubleshooting-ubuntu-dual-boot/
+      - title: Comparing Commercial Off The Shelf Embedded Platforms
+        url: /wiki/computing/comparing-COTS-embedded-systems/
   - title: Fabrication
     url: /wiki/fabrication/
     children:
