Added Navigation to Wiki Entry: Building Software from Source

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -219,6 +219,8 @@ wiki:
         url: /wiki/programming/tutorials-resources/
       - title: Python Construct
         url: /wiki/programming/python-construct/
+      - title: Building Software from Source
+        url: /wiki/programming/build-from-source/
   - title: Networking
     url: /wiki/networking/
     children:
