Added article for advanced moveit usage

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -366,6 +366,8 @@ wiki:
         url: /wiki/planning/frenet-frame-planning.md/
       - title: Move Base Flex
         url: /wiki/planning/move-base-flex/
+      - title: Advanced MoveIt usage for Manipulator Motion Planning
+        url: /wiki/planning/advanced-moveit-manipulator-planning/
 # Main links appear in the header.
 main:
   - title: Wiki
