Add Apple Vision Pro for Robotics Applications article
- Added comprehensive guide on integrating Apple Vision Pro with robotic systems
- Covers teleoperation using ARKit hand and head tracking
- Documents spatial perception with object tracking and world anchors
- Includes on-device AI using Foundation Models framework
- Added article to Interfacing section in navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -246,6 +246,8 @@ wiki:
   - title: Interfacing
     url: /wiki/interfacing/
     children:
+      - title: Apple Vision Pro for Robotics Applications
+        url: /wiki/interfacing/apple-vision-pro-for-robotics-applications/
       - title: Myo
         url: /wiki/interfacing/myo/
       - title: Blink(1) LED
